Fri May 27 01:00:36 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* symbol.c (is_identchar): use ISDIGIT instead of rb_enc_isalnum.
	  Though rb_enc_isalnum is encoding aware function, its argument here
	  is *m, which is a single byte. Therefore ISDIGIT is faster.

	* symbol.c (is_special_global_name): ditto.

	* symbol.c (rb_enc_symname_type): ditto.

Fri May 27 00:39:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): add nul padding here to
	  apply to all references.

	* include/ruby/ruby.h (rb_scan_args_verify): move length mismatch
	  check outside conditional operators.

Thu May 26 14:21:10 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_compute_key): Check that the DH
	  has 'p' (the prime) before calling DH_size(). We can create a DH with
	  no parameter but DH_size() does not check and dereferences NULL.
	  [ruby-core:75720] [Bug #12428]

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_sign): Ditto. DSA_size() does
	  not check dsa->q.

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_public_encrypt,
	  ossl_rsa_public_decrypt, ossl_rsa_private_encrypt,
	  ossl_rsa_private_decrypt): Ditto. RSA_size() does not check rsa->n.

Thu May 26 14:13:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_count): verify length with
	  counting variables together.

Thu May 26 09:45:41 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_comprehensive.rb: Add set of comprehensive
	  (across most Unicode characters; later across most character encodings)
	  tests for case mapping.

Thu May 26 05:00:13 2016  Benoit Daloze  <eregontp@gmail.com>

	* class.c (rb_define_class): Fix documentation.

Wed May 25 20:50:12 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (unescape_nonascii): scan hex up to only 3 characters.
	  [Bug #12420] [Bug #12423]

Wed May 25 19:07:19 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
